# z80_emulator

./: .gitignore  Assembly_TestProg.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  memory.rs  z80_cpu.rs
tests/: cpu_tests.rs
