[package]
name = "z80_emulator"
version = "0.4.0"
authors = ["DoubleGate <parobek@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A cycle-accurate Zilog Z80 CPU emulator written in Rust."
keywords = ["z80", "emulator", "rust", "cpu", "retrocomputing"]
repository = "https://github.com/doublegate/z80-emulator"

[dependencies]

[lib]
name = "z80_emulator"
path = "src/lib.rs"
